# homecart

./: .gitignore  .gitmodules  CMakeLists.txt  Kplot.m  README.md  arm_data_test.py  arm_rot_cmd2act.sid  ball_board_model_mpc.py  balldropdata.py  board_data_check.py  cbod.py  cbod_check.py  cbod_func.py  cbod_func2.py  cbod_ve12.py  cbod_velocity.py  cont_v_disc.m  gains.m  homography_check.py  idprefs.mat  k_plot_plus_vid_maker.m  k_plus_oldplots.m  kf3.py  kf_2meas_model.py  kf_check_jerk.py  kf_comp.py  kf_mpc.py  lfcomp.py  mid2_nkf_mpc.py  modelplot.fig  movel_test.py  mpc1d.py  mpc1d_learn.py  new_movel_plot_test.asv  new_movel_plot_test.m  nmpc_angle.asv  nmpc_angle3d.asv  nmpc_angle3d.m  nmpc_comp_plot.m  nmpc_iter_test.m  (+64 more)
JW_MPC_ball_board_model/: DevMPC6.asv  DevMPC6.m  RunMPC6.m  test_structure.m
JW_MPC_ballbalance/: DevMPC6.asv  DevMPC6.m  RunMPC6.m  SimMPC.m  test_structure.m
JW_MPC_ballbalance2/: DevMPC6.m  SimMPC.m  TEST.csv  sim_check.m  test_structure.m
JW_MPC_bbm_learn/: DevMPC6.m  RunMPC6.m  test_structure.m
bazel_test/: README.md  WORKSPACE  bazel-bazel_test  bazel-bin  bazel-out  bazel-testlogs  ur_rtde.BUILD  ur_rtde.BUILD.bazel  usr_include.BUILD
bazel_test/src/: BUILD  demo.cc
data/: .~lock.data_movel_2d_2024_01_08-06_04_22_PM.csv#  .~lock.u3.csv#  1dmpclearn_2024_02_20-04_39_34_PM.csv  1dmpclearn_2024_02_20-04_40_02_PM.csv  1dmpclearn_2024_02_20-04_40_42_PM.csv  ballbaordmodel_2024_02_01-07_43_27_PM.csv  ballbaordmodel_2024_02_01-08_08_14_PM.csv  ballbaordmodel_2024_02_01-08_17_24_PM.csv  ballbaordmodel_2024_02_01-08_30_53_PM.csv  ballbaordmodel_2024_02_01-08_31_22_PM.csv  ballbaordmodel_2024_02_01-08_39_03_PM.csv  ballbaordmodel_2024_02_01-08_40_23_PM.csv  ballbaordmodel_2024_02_01-08_42_01_PM.csv  ballbaordmodel_2024_02_02-02_23_52_PM.csv  ballbaordmodel_2024_02_02-02_27_05_PM.csv  ballbaordmodel_2024_02_02-02_38_41_PM.csv  ballbaordmodel_2024_02_02-02_43_04_PM.csv  ballbaordmodel_2024_02_02-06_59_37_PM.csv  ballbaordmodel_2024_02_02-07_07_30_PM.csv  ballbaordmodel_2024_02_02-07_07_55_PM.csv  ballbaordmodel_2024_02_02-07_12_15_PM.csv  ballbaordmodel_2024_02_02-12_46_24_PM.csv  ballbaordmodel_2024_02_02-12_52_04_PM.csv  ballbaordmodel_2024_02_05-01_48_42_PM.csv  ballbaordmodel_2024_02_05-07_29_43_PM.csv  ballbaordmodel_2024_02_05-08_18_27_PM.csv  ballbaordmodel_2024_02_05-08_21_13_PM.csv  ballbaordmodel_2024_02_05-08_22_19_PM.csv  ballbaordmodel_2024_02_05-08_26_03_PM.csv  ballbaordmodel_2024_02_05-08_27_32_PM.csv  ballbaordmodel_2024_02_06-01_27_12_PM.csv  ballbaordmodel_2024_02_06-01_29_09_PM.csv  ballbaordmodel_2024_02_06-01_32_24_PM.csv  ballbaordmodel_2024_02_06-01_45_16_PM.csv  ballbaordmodel_2024_02_06-01_53_11_PM.csv  ballbaordmodel_2024_02_06-02_06_51_PM.csv  ballbaordmodel_2024_02_06-02_13_22_PM.csv  ballbaordmodel_2024_02_06-02_16_02_PM.csv  ballbaordmodel_2024_02_07-01_06_29_PM.csv  ballbaordmodel_2024_02_07-01_10_16_PM.csv  (+701 more)
env/: pyvenv.cfg
misc/: camtest.py  depth_check.py  depth_check_updated.py  devicelist.py  h2.py  nmpc2.m  pd_x.m  pd_y.m  pytest.py  pythontester.py  tcheck.py  u_traj_data.csv  ur5e_nmpc.py  ur5e_nmpc_filt.py  ur5e_pd_.py  ur5e_pd_balancing.py
scripts/: BUILD.bazel  WORKSPACE  bazel-bin  bazel-out  bazel-scripts  bazel-testlogs
scripts/gripper_bazel_test/: BUILD  CMakeLists.txt  demo.cc
scripts/home_script/: BUILD  CMakeLists.txt  go_to_home_position.cc  home.cc  save_home_position.cc  tool_chail.txt
scripts/ur_get_joint_script/: CMakeLists.txt
sysiddata/: arm_sysid_data2_0_5.csv  arm_sysid_data3_0_5.csv  arm_sysid_data4_0_5.csv  arm_sysid_data4_0_75.csv  arm_sysid_data4_1_0.csv  arm_sysid_data4_1_25.csv  arm_sysid_data4_1_5.csv  arm_sysid_data4_2_0.csv  arm_sysid_data4_3_0.csv  (+2 more)
ur_sim/: CMakeLists.txt  get_ur5_joint_angles.py  run_ur_sim.sh  ur5e_acc_controller_test_SIM.py  ur_sim_get_joint_script.cpp  ur_sim_home_script.cpp
ur_sim/docker/: Dockerfile
ur_sim/scripts/gripper_test/: demo.cc
ur_sim/scripts/initial_test/: CMakeLists.txt  ur_sim_controlled_freq.cpp
ur_sim/scripts/trajectory_follow_test/: CMakeLists.txt  trajectory_follow_script.cpp
(+117 files in other folders)
